# helix-plus

./: README.md  README.md.orig  theme.toml  theme.toml.orig
.github/workflows/: build.yml  release.yml  release.yml.orig
.patchy/: config.toml
book/src/: configuration.md  editor.md  keymap.md  themes.md
helix-core/: Cargo.toml
helix-core/src/: graphemes.rs  transaction.rs
helix-dap/: Cargo.toml
helix-loader/: Cargo.toml
helix-lsp/: Cargo.toml
helix-lsp/src/: client.rs  lib.rs  lib.rs.orig
helix-term/: Cargo.toml
helix-term/src/: application.rs  args.rs  commands.rs  commands.rs.orig  compositor.rs  main.rs
helix-term/src/commands/: lsp.rs  lsp.rs.orig  typed.rs  typed.rs.orig
helix-term/src/keymap/: default.rs
helix-term/src/ui/: completion.rs  document.rs  editor.rs  explore.rs  explorer.rs  menu.rs  mod.rs  picker.rs  prompt.rs  tree.rs
helix-tui/: Cargo.toml
helix-vcs/: Cargo.toml
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  icons.rs  theme.rs
runtime/queries/xml/: highlights.scm
runtime/themes/: base16_default_dark.toml  base16_default_light.toml  bogster.toml  dracula.toml.orig  ingrid.toml.orig  onedark.toml  serika-dark.toml  serika-light.toml.orig
xtask/: Cargo.toml
