[package]
name = "helix-core"
version = "0.6.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
description = "Helix editor core editing primitives"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "README.md"]

[features]
unicode-lines = ["ropey/unicode_lines"]
integration = []

[dependencies]
helix-loader = { version = "0.6", path = "../helix-loader" }

ropey = { version = "1.5.1", default-features = false, features = ["simd"] }
smallvec = "1.10.0"
smartstring = "1.0.1"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
unicode-general-category = "0.6.0"
# slab = "0.4.2"
slotmap = "1.0.6"
tree-sitter = "0.20.9"
once_cell = "1.17.0"
arc-swap = "1.6.0"
regex = "1.7.1"
bitflags = "1.3.2"
ahash = "0.8.2"
hashbrown = { version = "0.13.2", features = ["raw"] }

log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"

imara-diff = "0.1.5"

encoding_rs = "0.8.31"

chrono = { version = "0.4.23", default-features = false, features = ["alloc", "std"] }

etcetera = "0.4.0"
textwrap = "0.16.0"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
