[package]
name = "helix-loader"
version = "0.6.0"
description = "A post-modern text editor."
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"

[[bin]]
name = "hx-loader"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.5.10"
etcetera = "0.4.0"
tree-sitter = "0.20.9"
once_cell = "1.17.0"
log = "0.4.17"

# TODO: these two should be on !wasm32 only

# cloning/compiling tree-sitter grammars
cc = "1.0.78"
threadpool = "1.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.7.4"
