[package]
name = "helix-term"
version = "0.6.0"
description = "A post-modern text editor."
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
categories = ["editor", "command-line-utilities"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "README.md"]
default-run = "hx"
rust-version = "1.57"

[package.metadata.nix]
build = true
app = true

[features]
default = ["git"]
unicode-lines = ["helix-core/unicode-lines"]
integration = []
git = ["helix-vcs/git"]

[[bin]]
name = "hx"
path = "src/main.rs"

[dependencies]
helix-core = { version = "0.6", path = "../helix-core" }
helix-view = { version = "0.6", path = "../helix-view" }
helix-lsp = { version = "0.6", path = "../helix-lsp" }
helix-dap = { version = "0.6", path = "../helix-dap" }
helix-vcs = { version = "0.6", path = "../helix-vcs" }
helix-loader = { version = "0.6", path = "../helix-loader" }

anyhow = "1.0.68"
once_cell = "1.17.0"

which = "4.3.0"

tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tui = { path = "../helix-tui", package = "helix-tui", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
signal-hook = "0.3.14"
tokio-stream = "0.1.11"
futures-util = { version = "0.3.25", features = ["std", "async-await"], default-features = false }
arc-swap = "1.6.0"

# Logging
fern = "0.6.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
log = "0.4.17"

# File picker
fuzzy-matcher = "0.3.7"
ignore = "0.4.19"
# markdown doc rendering
pulldown-cmark = { version = "0.9.2", default-features = false }
# file type detection
content_inspector = "0.2.4"

# config
toml = "0.5.10"

serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }

# ripgrep for global search
grep-regex = "0.1.11"
grep-searcher = "0.1.11"

[target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[build-dependencies]
helix-loader = { version = "0.6", path = "../helix-loader" }

[dev-dependencies]
smallvec = "1.10.0"
indoc = "1.0.8"
tempfile = "3.3.0"
