[package]
name = "helix-tui"
version = "0.6.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
description = """
A library to build rich terminal user interfaces or dashboards
"""
edition = "2021"
license = "MPL-2.0"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
include = ["src/**/*", "README.md"]

[features]
default = ["crossterm"]

[dependencies]
bitflags = "1.3.2"
cassowary = "0.3.0"
unicode-segmentation = "1.10.0"
crossterm = { version = "0.25.0", optional = true }
termini = "0.1.4"
serde = { version = "1.0.152", "optional" = true, features = ["derive"] }
helix-view = { version = "0.6", path = "../helix-view", features = ["term"] }
helix-core = { version = "0.6", path = "../helix-core" }
