[package]
name = "helix-view"
version = "0.6.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
description = "UI abstractions for use in backends"
categories = ["editor"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"

[features]
default = []
term = ["crossterm"]

[dependencies]
bitflags = "1.3.2"
anyhow = "1.0.68"
helix-core = { version = "0.6", path = "../helix-core" }
helix-loader = { version = "0.6", path = "../helix-loader" }
helix-lsp = { version = "0.6", path = "../helix-lsp" }
helix-dap = { version = "0.6", path = "../helix-dap" }
crossterm = { version = "0.25.0", optional = true }
helix-vcs = { version = "0.6", path = "../helix-vcs" }

# Conversion traits
once_cell = "1.17.0"
url = "2.3.1"

arc-swap = "1.6.0"

tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tokio-stream = "0.1.11"
futures-util = { version = "0.3.25", features = ["std", "async-await"], default-features = false }

slotmap = "1.0.6"

chardetng = "0.1.17"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"
log = "0.4.17"

which = "4.3.0"


[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "4.5.0", features = ["std"] }

[dev-dependencies]
helix-tui = { path = "../helix-tui" }
